# gitlab-mcp-server

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: gitlab_mcp_server.py
